<resources>
    <string name="app_name">MDP Remote</string>
    <string name="activity_tilt_steering">Tilt Steering</string>

    <string name="bluetooth_connect">Connect Bluetooth</string>
    <string name="bluetooth_disconnect">Disconnect Bluetooth</string>

    <!--bluetooth dialog strings-->
    <string name="bt_dialog_title">Bluetooth</string>
    <string name="bt_dialog_available_devices">Available Devices</string>
    <string name="bt_dialog_scan">Scan</string>
    <string name="bt_dialog_stop_scan">Stop</string>
    <string name="bt_dialog_done">Done</string>
    <string name="bt_dialog_not_found">No Bluetooth devices found</string>

    <!--controller strings-->
    <string name="activity_controller">Controller</string>
    <string name="ctrPath">Path</string>
    <string name="ctrExplore">Explore</string>
    <string name="ctrReverse">Reverse</string>
    <string name="ctrLeft">Left</string>
    <string name="ctrRight">Right</string>
    <string name="ctrForward">Forward</string>
    <string name="ctrStrafeLeft">Strafe Left</string>
    <string name="ctrStrafeRight">Strafe Right</string>


</resources>
