<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mdpgrp4.mdpremote.Controller"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="89dp">


    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="810dp"
        tools:layout_editor_absoluteX="149dp"
        tools:layout_editor_absoluteY="8dp">

        <Button
            android:id="@+id/ctrLeft"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="1"
            android:background="@color/controllerDirections"
            android:text="@string/ctrLeft" />

        <Button
            android:id="@+id/ctrForward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="0"
            android:background="@color/controllerDirections"
            android:text="@string/ctrForward" />

        <Button
            android:id="@+id/ctrRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="1"
            android:background="@color/controllerDirections"
            android:text="@string/ctrRight" />

        <Button
            android:id="@+id/ctrReverse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="2"
            android:background="@color/controllerDirections"
            android:text="@string/ctrReverse" />

        <Button
            android:id="@+id/ctrStrafeLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="3"
            android:background="@color/controllerStrafe"
            android:text="@string/ctrStrafeLeft" />

        <Button
            android:id="@+id/ctrStrafeRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="3"
            android:background="@color/controllerStrafe"
            android:text="@string/ctrStrafeRight"
            tools:layout_editor_absoluteX="649dp"
            tools:layout_editor_absoluteY="168dp" />

        <Button
            android:id="@+id/ctrExplore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="4"
            android:background="@color/controllerInit"
            android:text="@string/ctrExplore" />

        <Button
            android:id="@+id/ctrPath"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="4"
            android:background="@color/controllerInit"
            android:text="@string/ctrPath" />

    </GridLayout>

</android.support.constraint.ConstraintLayout>
